style.css Datei hinzugefügt

--- a/Fotostartseiteneu.html
+++ b/Fotostartseiteneu.html
@@ -4,8 +4,8 @@
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
-  @import "style.css";
   body {background-color:#99cc33;}
   table {width:800;border-style:non;}
   td {vertical-align:center; overflow:hidden; }
