--- a/Kontaktneu.html
+++ b/Kontaktneu.html
@@ -4,16 +4,12 @@
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
-  @import "style.css";
   </style>
-  <link href="Kontaktneu_Dateien/a" media="screen" rel="alternate stylesheet" title="Grünes Design"
-  type="text/css">
-  <link href="Kontaktneu_Dateien/a" media="screen" rel="alternate stylesheet" title="Rotes Design"
-  type="text/css">
   <title>Kontakt</title>
 </head>
-<body alink="#FFFFFF" bgcolor="#99CC33" link="#FFCC99" onload="makesnake()" style="width: 100%;"
+<body alink="#FFFFFF" bgcolor="#99CC33" link="#FFCC99" style="width: 100%;"
 text="#FFCC99" vlink="#FFCC99">
   <div align="center" id="uebersicht">
     <table border="0" cellpadding="0" cellspacing="0" width="500">
