--- a/Tipsneu.html
+++ b/Tipsneu.html
@@ -4,13 +4,9 @@
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten, Steingarten, Pflanzen, Versand, Verkauf" lang="de" name="keywords">
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
-  @import "style.css";
   </style>
-  <link href="Tipsneu_Dateien/a" media="screen" rel="alternate stylesheet" title="Grünes Design"
-  type="text/css">
-  <link href="Tipsneu_Dateien/a" media="screen" rel="alternate stylesheet" title="Rotes Design"
-  type="text/css">
   <title>Tipps, Tricks und Pflegeanleitungen</title>
 </head>
 <body alink="#FFFFFF" background="images/Gentiana-djimilensis-bg.jpg" link="#FFCC99" style=
