--- a/index.html
+++ b/index.html
@@ -7,41 +7,11 @@
   <meta content=
   "Christophs Pflanzenparadies. Verkaufsliste für Steingartenpflanzen. Mediterrane Raritäten, Dr. Christoph Rohlfs"
   lang="de" name="description">
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
-  .imgstyle {
-    position: absolute;
-    visibility: visible;
-    top: -150px;
-  }
   body {
     background-image: url("images/Cyclamen-hederifolium.JPG");
     margin: 50px 30px;
-  }
-  body, p, td {
-    color: #99cc33;
-    font: 16px sans-serif;
-  }
-  .title {
-    font: 24px sans-serif;
-    text-align: center;
-    background-color: #009900;
-  }
-  a:link {
-    color: #ffcc99;
-  }
-  a:visited {
-    color: #ffcc99;
-  }
-  a:active {
-    color: #ffffff;
-  }
-  table {
-    border: 0px;
-    width: 500px;
-    border-spacing: 0px;
-  }
-  td {
-    padding: 20px;
   }
   </style>
   <title>Der Steingärtner</title>
