--- a/linksammlung.html
+++ b/linksammlung.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <style media="all" type="text/css">
+	</style>
 <title>Die Linksammlung</title>
 
 
@@ -28,4 +31,4 @@
 <br>
 <p> Bitte haben Sie Verständnis dafür, dass ich für den Inhalt der verlinkten Seiten nicht haften kann. </p>
 </body>
-</html>>
+</html>
