--- a/preisliste.html
+++ b/preisliste.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+  <style media="all" type="text/css">
+  </style>
   <title>Die Preisliste</title>
 </head>
 <body alink="#FFFFFF" bgcolor="#008800" link="#88AA55" onload="makesnake()" style=
