index.html komplett überarbeitet, body/background überall klarer gemacht

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
   <meta content="de" http-equiv="Content-Language">
   <meta content="Garten,Steingarten,Dianthus,Daphne,Canarina,Campanula,Cistus,Ramonda,Verkauf"
   lang="de" name="keywords">
@@ -11,71 +12,60 @@
   <style media="all" type="text/css">
   body {
     background-image: url("images/Cyclamen-hederifolium.JPG");
-    margin: 50px 30px;
+  }
+  td.kachel {
+    width: 50%;
+    height: 200px;
+  }
+  a.big {
+    padding: 30px;
+    display: block;
+  }
+  a.big:hover {
+    background-color: rgba(255,255,255,0.2);
   }
   </style>
   <title>Der Steingärtner</title>
 </head>
 <body>
-  <div align="center" id="uebersicht">
-    <table>
-      <tbody>
-        <tr>
-          <td class="title" colspan="2">Der Steingärtner</td>
-        </tr>
-        <tr>
-          <td bgcolor="#007700" colspan="2" width="100%">
-            <p align="left" style="margin-right: 10px;"><font face="Arial" size="3">Willkommen auf
-            meiner Homepage!</font></p>
-            <p align="left" style="margin-right: 10px;"><font face="Arial" size="3">Als
-            begeisterter Hobbygärtner möchte ich Ihnen hier ein paar Einblicke in meinen Garten
-            geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber
-            in meinem Garten ist auch für zahlreiche Stauden, Rosen, Sommerblumen, Gemüse und
-            Obstgehölze Platz, in meinem Gewächshaus dürfen Orchideen ihre Pracht
-            entfalten.</font></p>
-            <p align="left" style="margin-right: 10px;"><font face="Arial" size="3">Im Hauptberuf
-            bin ich übrigens Zahnarzt, verheiratat, und habe 2 Kinder. Mein Garten liegt in Bonn,
-            allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am
-            Stadtrand. Mein Name: Dr. Christoph Rohlfs</font></p>
-            <p align="left" style="margin-right: 10px;"><font face="Arial" size="3">Androsace,
-            Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula,
-            Ramonda... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in
-            meinem Garten.</font></p>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#448800" height="200" width="50%">
-            <p align="center"><font face="Arial" size="4"><a href="Tipsneu.html">Tips, Tricks und
-            Pflegeanleitungen</a></font></p>
-          </td>
-          <td bgcolor="#00AA11" height="200" width="50%">
-            <p align="center"><font face="Arial" size="4"><a href=
-            "Fotostartseiteneu.html">Fotos</a></font><br>
-            <font face="Arial" size="2">Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem
-            gibt es Fotos von Steingartenpflanzen zu sehen<br></font></p>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#44AA00" height="200" width="50%">
-            <p align="center"><font face="Arial" size="4"><a href="Kontaktneu.html">Kontakt,
-            Impressum, Datenschutz</a></font></p>
-          </td>
-          <td bgcolor="#337711" height="200" width="50%">
-            <p align="center"><font face="Arial" size="4"><a href=
-            "preisliste.html">Bestellung</a></font><br>
-            <font face="Arial" size="2">Brauchen Sie noch Steingartenpflanzen für Ihren eigenen
-            Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum
-            Bestellformular<br></font></p>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#009700&quot;" colspan="2">
-            <p align="middle" style="margin-right: 10px;"><font color="#GG0000&quot;" face="Arial"
-            size="3"><a href="linksammlung.html">Linksammlung</a></font></p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <table><tbody>
+    <tr>
+      <td class="title" style="font-family: 'Tangerine';" colspan="2">Der Steingärtner</td>
+    </tr>
+    <tr>
+      <td class="green1" colspan="2">
+        <p>Willkommen auf meiner Homepage!</p>
+        <p>Als begeisterter Hobbygärtner möchte ich Ihnen hier ein paar Einblicke in meinen Garten geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber in meinem Garten ist auch für zahlreiche Stauden, Rosen, Sommerblumen, Gemüse und Obstgehölze Platz, in meinem Gewächshaus dürfen Orchideen ihre Pracht entfalten.</p>
+        <p>Im Hauptberuf bin ich übrigens Zahnarzt, verheiratat, und habe 2 Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am Stadtrand. Mein Name: Dr. Christoph Rohlfs</p>
+        <p>Androsace, Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula, Ramonda ... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in meinem Garten.</p>
+      </td>
+    </tr>
+    <tr>
+      <td class="green2 center kachel">
+        <a class="big" href="Tipsneu.html">Tips, Tricks und Pflegeanleitungen</a>
+      </td>
+      <td class="green6 center kachel">
+        <a class="big" href="Fotostartseiteneu.html">Fotos</a>
+        <p>Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem
+        gibt es Fotos von Steingartenpflanzen zu sehen.</p>
+      </td>
+    </tr>
+    <tr>
+      <td class="green3 center kachel">
+        <a class="big" href="Kontaktneu.html">Kontakt,
+        Impressum, Datenschutz</a>
+      </td>
+      <td class="green4 center kachel">
+        <a class="big" href="preisliste.html">Bestellung</a>
+        <p>Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum
+        Bestellformular</p>
+      </td>
+    </tr>
+    <tr>
+      <td class="green5 center" style="height: 100px;" colspan="2">
+        <a class="big" href="linksammlung.html">Linksammlung</a>
+      </td>
+    </tr>
+  </tbody></table>
 </body>
 </html>
