--- a/linksammlung.html
+++ b/linksammlung.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<body bgcolor=#008800 text=#FFCC99 link=#88AA55 vlink=#440000 alink=#FFFFFF leftmargin=30 topmargin=50 onLoad="makesnake()" style="width:100%; overflow-x:hidden; overflow-y:scroll">
+<body bgcolor=#008800>
 <spacer type=horizontal size=800><a href="index.html">zurück zur Startseite</a>
 <h1>Hier gibt es Links zu allen möglichen Themen rund um den Garten</h1>
 <br>
