--- a/preisliste.html
+++ b/preisliste.html
@@ -6,8 +6,7 @@
   </style>
   <title>Die Preisliste</title>
 </head>
-<body alink="#FFFFFF" bgcolor="#008800" link="#88AA55" onload="makesnake()" style=
-"width:100%; overflow-x:hidden; overflow-y:scroll" text="#FFCC99" vlink="#440000">
+<body bgcolor="#008800">
   <p align="right"><a href="index.html">zurück zur Startseite</a></p>
   <h1>Hier ist meine aktuelle Preisliste.</h1>
   <p>Letzte Aktualisierung am 15.3.2016.</p>
