--- a/Fotostartseiteneu.html
+++ b/Fotostartseiteneu.html
@@ -12,8 +12,7 @@
   </style>
   <title>Christophs Pflanzenparadies - Fotos</title>
 </head>
-<body alink="#FFFFFF" background="images/Background.jpg" link="#FFCC99" onload="makesnake()" style=
-"width: 100%;" text="#FFCC99" vlink="#FFCC99">
+<body background="images/Background.jpg">
   <div align="center" id="uebersicht">
     <p><a href="index.html">zurück zur Startseite</a></p>
     <table cellpadding="0" cellspacing="0">
