--- a/Kontaktneu.html
+++ b/Kontaktneu.html
@@ -9,39 +9,18 @@
   </style>
   <title>Kontakt</title>
 </head>
-<body alink="#FFFFFF" bgcolor="#99CC33" link="#FFCC99" style="width: 100%;"
-text="#FFCC99" vlink="#FFCC99">
+<body bgcolor="#99CC33">
   <div align="center" id="uebersicht">
     <table border="0" cellpadding="0" cellspacing="0" width="500">
       <tbody>
         <tr>
           <td bgcolor="#007700" width="100%">
             <p align="center"><font face="Arial" size="3"><b>Dr. Christoph Rohlfs</b></font></p>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#007700" width="100%">
             <p align="center"><font face="Arial" size="3"><b>Bitzerweg 6</b></font></p>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#007700" width="100%">
             <p align="center"><font face="Arial" size="3"><b>53229 Bonn</b></font></p>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#007700" width="100%">
             <p align="center"><font face="Arial" size="3"><b>Tel.: (0228) 48 19 13
             (abends)</b></font></p>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#007700" width="100%">
             <p align="center"><font face="Arial" size="3"><b>Fax: (0228) 9086972</b></font></p>
-          </td>
-        </tr>
-        <tr>
-          <td bgcolor="#007700" width="100%">
             <p align="center"><font face="Arial" size="3"><b>e-mail:
             rohlfs.bonn(@)freenet.de</b></font></p>
           </td>
