--- a/Schattenpflanzen.html
+++ b/Schattenpflanzen.html
@@ -6,14 +6,20 @@
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
-  body {background-color:#99cc33;}
-  table {width:70%;border-style:non;}
-  td {vertical-align:center; overflow:hidden; }
+    body {
+      background-image: url("images/Kalmie-bg.jpg");
+    }
+    table {
+      width: 70%;
+    }
+    td {
+      vertical-align:center;
+      overflow:hidden;
+    }
   </style>
   <title>Schattenpflanzen</title>
 </head>
-<body alink="#FFFFFF" background="images/Kalmie-bg.jpg" link="#FFCC99" onload="makesnake()" style=
-"width: 100%;" text="#FFCC99" vlink="#FFCC99">
+<body>
   <div align="center" id="uebersicht">
     <table border="0" cellpadding="0" cellspacing="0" width="500">
       <tbody>
