--- a/Tipsneu.html
+++ b/Tipsneu.html
@@ -6,11 +6,13 @@
   <meta content="Christopfs Pflanzenparadies" lang="de" name="description">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
+    body {
+      background-image: url("images/Gentiana-djimilensis-bg.jpg");
+    }
   </style>
   <title>Tipps, Tricks und Pflegeanleitungen</title>
 </head>
-<body alink="#FFFFFF" background="images/Gentiana-djimilensis-bg.jpg" link="#FFCC99" style=
-"width: 100%;" text="#FFCC99" vlink="#FFCC99">
+<body>
   <div align="center" id="uebersicht">
     <p><a href="index.html">zurück zur Startseite</a></p>
     <table border="0" cellpadding="0" cellspacing="0" width="800">
