--- a/andere_pflanzen.html
+++ b/andere_pflanzen.html
@@ -12,8 +12,7 @@
   </style>
   <title>andere interessante Gartenpflanzen</title>
 </head>
-<body alink="#FFFFFF" background="images/Nepeta-cubanica-bg.jpg" link="#FFCC99" onload=
-"makesnake()" style="width: 100%;" text="#FFCC99" vlink="#FFCC99">
+<body background="images/Nepeta-cubanica-bg.jpg">
   <div align="center" id="uebersicht">
     <table border="0" cellpadding="0" cellspacing="0" width="500">
       <tbody>
