--- a/androsace_und_daphne.html
+++ b/androsace_und_daphne.html
@@ -12,8 +12,7 @@
   </style>
   <title>Androsace und Daphne</title>
 </head>
-<body alink="#FFFFFF" background="images/Daphne-bg.jpg" link="#FFCC99" onload="makesnake()" style=
-"width: 100%;" text="#FFCC99" vlink="#FFCC99">
+<body background="images/Daphne-bg.jpg">
   <div align="center" id="uebersicht">
     <table border="0" cellpadding="0" cellspacing="0" width="500">
       <tbody>
