--- a/nelken.html
+++ b/nelken.html
@@ -12,8 +12,7 @@
   </style>
   <title>Nelken</title>
 </head>
-<body alink="#FFFFFF" background="images/Dianthus-bg.jpg" link="#FFCC99" onload="makesnake()"
-style="width: 100%;" text="#FFCC99" vlink="#FFCC99">
+<body background="images/Dianthus-bg.jpg">
   <div align="center" id="uebersicht">
     <table border="0" cellpadding="0" cellspacing="0" width="500">
       <tbody>
