Tabellen vereinfacht. Fotoseite überarbeitet.

--- a/Fotostartseiteneu.html
+++ b/Fotostartseiteneu.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
   body {background-color:#99cc33;}
-  table {width:800;border-style:non;}
+
   td {vertical-align:center; overflow:hidden; }
   </style>
   <title>Christophs Pflanzenparadies - Fotos</title>
@@ -15,156 +15,117 @@
 <body background="images/Background.jpg">
   <div align="center" id="uebersicht">
     <p><a href="index.html">zurück zur Startseite</a></p>
-    <table cellpadding="0" cellspacing="0">
+    <table>
       <tbody>
         <tr>
-          <td bgcolor="#007700" width="100%">
-            <p align="center"><font face="Arial" size="4">Hier geht es zu den Fotos! Der
-            Übersichtlichkeit halber gibt es mehrere Kategorien:</font></p>
+          <td class="center" bgcolor="#007700">
+            <p>Hier geht es zu den Fotos! Der
+            Übersichtlichkeit halber gibt es mehrere Kategorien:</p>
           </td>
         </tr>
       </tbody>
     </table>
     <p></p>
-    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
+    <table>
       <tbody>
         <tr>
-          <td bgcolor="#00AA11" height="150" width="678">
-            <p align="center"><font face="Arial" size="4"><a href=
-            "Fruehjahr.html">Steingartenpflanzen für das Frühjahr</a></font></p>
+          <td class="center" bgcolor="#00AA11">
+            <p><a class="big" href="Fruehjahr.html">Steingartenpflanzen für das Frühjahr</a></p>
           </td>
-          <td bgcolor="#00AA11" height="150" width="122">
-            <p align="right"><img align="middle" height="150" src="images/Iris-Rand.jpg"></p>
+          <td class="center" bgcolor="#00AA11">
+            <p align="right"><img height="150" src="images/Iris-Rand.jpg"></p>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
-      <tbody>
         <tr>
-          <td bgcolor="#448800" height="150" width="678">
-            <p align="center"><font face="Arial" size="4"><a href="Sommer.html">Steingartenpflanzen
-            für Sommer und Herbst</a></font></p>
+          <td class="center" bgcolor="#448800">
+            <p><a class="big" href="Sommer.html">Steingartenpflanzen
+            für Sommer und Herbst</a></p>
           </td>
-          <td bgcolor="#448800" height="150" width="122">
-            <p align="right"><img align="middle" height="150" src="images/CROCUSS-Rand.jpg"></p>
+          <td class="center" bgcolor="#448800">
+            <p align="right"><img height="150" src="images/CROCUSS-Rand.jpg"></p>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
-      <tbody>
         <tr>
-          <td bgcolor="#00AA11" height="150" width="678">
-            <p align="center"><font face="Arial" size="4"><a href=
-            "Campanulaceae.html">Glockenblumen und Verwandte</a></font></p>
+          <td class="center" bgcolor="#00AA11">
+            <p><a class="big" href=
+            "Campanulaceae.html">Glockenblumen und Verwandte</a></p>
           </td>
-          <td bgcolor="#00AA11" height="150" width="122">
-            <p align="right"><img align="middle" height="150" src=
+          <td class="center" bgcolor="#00AA11">
+            <p align="right"><img height="150" src=
             "images/Campanula-saxifraga-Rand.jpg"></p>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
-      <tbody>
         <tr>
-          <td bgcolor="#007700" height="150" width="678">
-            <p align="center"><font face="Arial" size="4"><a href="Schattenpflanzen.html">Pflanzen
-            für Schatten</a></font></p>
+          <td class="center" bgcolor="#007700">
+            <p><a class="big" href="Schattenpflanzen.html">Pflanzen
+            für Schatten</a></p>
           </td>
-          <td bgcolor="#007700" height="150" width="122">
-            <p align="right"><img align="middle" height="150" src=
+          <td class="center" bgcolor="#007700">
+            <p align="right"><img height="150" src=
             "images/Glaucidium-palmatum-Rand.jpg"></p>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
-      <tbody>
         <tr>
-          <td bgcolor="#337700" height="150" width="678">
-            <p align="center"><font face="Arial" size="4"><a href=
-            "Zistrosen.html">Zistrosen</a></font></p>
+          <td class="center" bgcolor="#337700">
+            <p><a class="big" href=
+            "Zistrosen.html">Zistrosen</a></p>
           </td>
-          <td bgcolor="#337700" height="150" width="122">
-            <p align="right"><img align="middle" height="150" src=
+          <td class="center" bgcolor="#337700">
+            <p align="right"><img height="150" src=
             "images/Cistus-ladanifer-Rand.jpg"></p>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
-      <tbody>
         <tr>
-          <td bgcolor="#44AA00" height="150" width="678">
-            <p align="center"><font face="Arial" size="4"><a href=
-            "Cyclamen.html">Cyclamen</a></font></p>
+          <td class="center" bgcolor="#44AA00">
+            <p><a class="big" href=
+            "Cyclamen.html">Cyclamen</a></p>
           </td>
-          <td bgcolor="#44AA00" height="150" width="122">
-            <p align="right"><img align="middle" height="150" src=
+          <td class="center" bgcolor="#44AA00">
+            <p align="right"><img height="150" src=
             "images/Cyc-hederi-dunkel-Rand.jpg"></p>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
-      <tbody>
         <tr>
-          <td bgcolor="#337711" height="150" width="678">
-            <p align="center"><font face="Arial" size="4"><a href="Kalthauspflanzen.html">Pflanzen
-            fürs Kalthaus</a></font></p>
+          <td class="center" bgcolor="#337711">
+            <p><a class="big" href="Kalthauspflanzen.html">Pflanzen
+            fürs Kalthaus</a></p>
           </td>
-          <td bgcolor="#337711" height="150" width="122">
-            <p align="right"><img align="middle" height="150" src=
+          <td class="center" bgcolor="#337711">
+            <p align="right"><img height="150" src=
             "images/Fremontodendron-Rand.jpg"></p>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
-      <tbody>
         <tr>
-          <td bgcolor="#44AA00" height="150" width="678">
-            <p align="center"><font face="Arial" size="4"><a href=
-            "androsace_und_daphne.html">Androsace und Daphne</a></font></p>
+          <td class="center" bgcolor="#44AA00">
+            <p><a class="big" href=
+            "androsace_und_daphne.html">Androsace und Daphne</a></p>
           </td>
-          <td bgcolor="#44AA00" height="150" width="122">
-            <p align="right"><img align="middle" height="150" src=
+          <td class="center" bgcolor="#44AA00">
+            <p align="right"><img height="150" src=
             "images/Daphne-arbuscula-Rand.jpg"></p>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
-      <tbody>
         <tr>
-          <td bgcolor="#337711" height="150" width="678">
-            <p align="center"><font face="Arial" size="4"><a href=
-            "nelken.html">Nelken</a></font></p>
+          <td class="center" bgcolor="#337711">
+            <p><a class="big" href=
+            "nelken.html">Nelken</a></p>
           </td>
-          <td bgcolor="#337711" height="150" width="122">
-            <p align="right"><img align="middle" height="150" src=
-            "images/Dianthus-Bodensee-Rand.jpg"></p>
+          <td class="center" bgcolor="#337711">
+            <p align="right"><img height="150" src="images/Dianthus-Bodensee-Rand.jpg"></p>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <table border="0" cellpadding="0" cellspacing="0" style="table-layout: fixed;">
-      <tbody>
         <tr>
-          <td bgcolor="#00AA11" height="150" width="678">
-            <p align="center"><font face="Arial" size="4"><a href="andere_pflanzen.html">andere
-            Pflanzen</a></font></p>
+          <td class="center" bgcolor="#00AA11">
+            <p><a class="big" href="andere_pflanzen.html">andere
+            Pflanzen</a></p>
           </td>
-          <td bgcolor="#00AA11" height="150" width="122">
-            <p align="right"><img align="middle" height="150" src=
+          <td class="center" bgcolor="#00AA11">
+            <p align="right"><img height="150" src=
             "images/Cercis-siliquastrum-Rand.jpg"></p>
           </td>
         </tr>
       </tbody>
     </table>
-    <p></p>
     <p><a href="index.html">zurück zur Startseite</a></p>
   </div>
 </body>
