--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     display: block;
   }
   a.big:hover {
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgba(255, 255, 255, 0.2);
   }
   </style>
   <title>Der Steingärtner</title>
@@ -30,7 +30,7 @@
 <body>
   <table><tbody>
     <tr>
-      <td class="title" style="font-family: 'Tangerine';" colspan="2">Der Steingärtner</td>
+      <td class="title" style="" colspan="2">Der Steingärtner</td>
     </tr>
     <tr>
       <td class="green1" colspan="2">
