--- a/Campanulaceae.html
+++ b/Campanulaceae.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
   body {background-color:#99cc33;}
-  table {width:70%;border-style:non;}
+
   td {vertical-align:center; overflow:hidden; }
   </style>
   <title>Campanulaceae</title>
 </head>
 <body background="images/Campanulawiese.jpg">
   <div align="center" id="uebersicht">
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td align="center" bgcolor="#007700" height="80" width="660"><font face=
@@ -23,7 +23,7 @@
       </tbody>
     </table>
     <p></p>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="30" width="500">
@@ -32,7 +32,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -50,7 +50,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -74,7 +74,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -91,7 +91,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="173">
@@ -106,7 +106,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -122,7 +122,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -137,7 +137,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
@@ -156,7 +156,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -170,7 +170,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="230" valign="middle" width="200">
@@ -188,7 +188,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="230" valign="middle" width="200">
@@ -208,7 +208,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="233">
@@ -224,7 +224,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -240,7 +240,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -264,7 +264,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="284">
@@ -279,7 +279,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -303,7 +303,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="284">
@@ -318,7 +318,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -343,7 +343,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="284">
@@ -358,7 +358,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -382,7 +382,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="284">
@@ -397,7 +397,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -421,7 +421,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="284">
@@ -436,7 +436,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="230" valign="middle" width="200">
@@ -456,7 +456,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -480,7 +480,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="284">
@@ -495,7 +495,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -527,7 +527,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -557,7 +557,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
