--- a/Cyclamen.html
+++ b/Cyclamen.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
   body {background-color:#99cc33;}
-  table {width:70%;border-style:non;}
+
   td {vertical-align:center; overflow:hidden;}
   </style>
   <title>Christophs Fotos - Cyclamen</title>
 </head>
 <body background="images/Cyclamen-bg.jpg">
   <div align="center" id="uebersicht">
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#007700" height="80" width="500">
@@ -33,7 +33,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="10">
@@ -52,7 +52,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="10">
@@ -71,7 +71,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="344">
@@ -89,7 +89,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="10">
@@ -106,7 +106,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="226">
@@ -127,7 +127,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="5">
@@ -146,7 +146,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="5">
@@ -165,7 +165,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="15">
@@ -192,7 +192,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="5">
@@ -225,7 +225,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="348">
@@ -242,7 +242,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="5">
@@ -263,7 +263,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="5">
@@ -296,7 +296,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="5">
@@ -318,7 +318,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="214">
@@ -335,7 +335,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="5">
@@ -355,7 +355,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="30" width="500">
@@ -364,7 +364,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="214">
@@ -380,7 +380,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="5">
@@ -399,7 +399,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" width="214">
