--- a/Kalthauspflanzen.html
+++ b/Kalthauspflanzen.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
   body {background-color:#99cc33;}
-  table {width:70%;border-style:non;}
+
   td {vertical-align:center; overflow:hidden; }
   </style>
   <title>Kalthauspflanzen</title>
 </head>
 <body background="images/Geranium-bg.jpg">
   <div align="center" id="uebersicht">
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td align="center" bgcolor="#007700" height="80" width="660"><font face=
@@ -23,7 +23,7 @@
       </tbody>
     </table>
     <p></p>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="30" width="500">
@@ -32,7 +32,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" style="margin-left: 10px;" valign=
@@ -48,7 +48,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -64,7 +64,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
@@ -84,7 +84,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="283">
@@ -107,7 +107,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="300">
@@ -124,7 +124,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="300">
@@ -140,7 +140,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="300">
@@ -155,7 +155,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="233">
@@ -175,7 +175,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -192,7 +192,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -217,7 +217,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -234,7 +234,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -250,7 +250,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -276,7 +276,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -292,7 +292,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -318,7 +318,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -334,7 +334,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
@@ -359,7 +359,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="186">
