--- a/Kontaktneu.html
+++ b/Kontaktneu.html
@@ -11,7 +11,7 @@
 </head>
 <body bgcolor="#99CC33">
   <div align="center" id="uebersicht">
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#007700" width="100%">
@@ -30,7 +30,7 @@
     <p></p>
     <p></p>
     <p></p>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#004700" width="100%">
