--- a/Tipsneu.html
+++ b/Tipsneu.html
@@ -15,7 +15,7 @@
 <body>
   <div align="center" id="uebersicht">
     <p><a href="index.html">zurück zur Startseite</a></p>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td align="center" bgcolor="#007700" height="80" width="800"><font face=
@@ -24,7 +24,7 @@
       </tbody>
     </table>
     <p></p>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#448800" width="100%">
@@ -48,7 +48,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#448800" width="100%">
@@ -66,7 +66,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#448800" width="100%">
@@ -91,7 +91,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#448800" width="100%">
@@ -185,7 +185,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#448800" width="100%">
@@ -218,7 +218,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
@@ -237,7 +237,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#448800" width="100%">
@@ -248,7 +248,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
@@ -268,7 +268,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="220">
@@ -286,7 +286,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
@@ -304,7 +304,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#448800" width="100%">
@@ -348,7 +348,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="800">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#448800" width="100%">
