--- a/Zistrosen.html
+++ b/Zistrosen.html
@@ -23,7 +23,7 @@
 <body>
   <div align="center" id="uebersicht">
     <div align="center" id="sonstnoch">
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td align="center" bgcolor="#007700" height="80" width="660"><font face=
@@ -41,7 +41,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="200" valign="middle" width="196">
@@ -57,7 +57,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="200" valign="middle" width="320">
@@ -74,7 +74,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="200" valign="middle" width="163">
@@ -92,7 +92,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="200" valign="middle" width="331">
@@ -108,7 +108,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="200" valign="middle" width="275">
@@ -123,7 +123,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="200" valign="middle" width="331">
@@ -139,7 +139,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="200" valign="middle" width="331">
@@ -155,7 +155,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="30" width="500">
@@ -164,7 +164,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="200" valign="middle" width="275">
@@ -179,7 +179,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="200" valign="middle" width="331">
@@ -194,7 +194,7 @@
           </tr>
         </tbody>
       </table>
-      <table border="0" cellpadding="0" cellspacing="0" width="500">
+      <table>
         <tbody>
           <tr>
             <td bgcolor="#44AA00" height="200" valign="middle" width="275">
