--- a/androsace_und_daphne.html
+++ b/androsace_und_daphne.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
   body {background-color:#99cc33;}
-  table {width:70%;border-style:non;}
+
   td {vertical-align:center; overflow:hidden; }
   </style>
   <title>Androsace und Daphne</title>
 </head>
 <body background="images/Daphne-bg.jpg">
   <div align="center" id="uebersicht">
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td align="center" bgcolor="#007700" height="80" width="660"><font face=
@@ -23,7 +23,7 @@
       </tbody>
     </table>
     <p></p>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="30" width="500">
@@ -32,7 +32,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="190" style="margin-left: 10px;" valign=
@@ -46,7 +46,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -62,7 +62,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="190" style="margin-left: 10px;" valign=
@@ -77,7 +77,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
@@ -97,7 +97,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -113,7 +113,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="190" style="margin-left: 10px;" valign=
@@ -127,7 +127,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="200">
@@ -146,7 +146,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="300">
@@ -161,7 +161,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="233">
@@ -177,7 +177,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -194,7 +194,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="233">
@@ -209,7 +209,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -225,7 +225,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="233">
@@ -240,7 +240,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="328">
@@ -255,7 +255,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500"></table>
+    <table></table>
     <p></p>
     <p><a href="index.html">zurück zur Startseite</a> <a href="Fotostartseiteneu.html">zurück zur
     Fotoübersicht</a></p>
