--- a/nelken.html
+++ b/nelken.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <style media="all" type="text/css">
   body {background-color:#99cc33;}
-  table {width:70%;border-style:non;}
+
   td {vertical-align:center; overflow:hidden; }
   </style>
   <title>Nelken</title>
 </head>
 <body background="images/Dianthus-bg.jpg">
   <div align="center" id="uebersicht">
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td align="center" bgcolor="#007700" height="80" width="660"><font face=
@@ -23,7 +23,7 @@
       </tbody>
     </table>
     <p></p>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="30" width="500">
@@ -32,7 +32,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" style="margin-left: 10px;" valign=
@@ -50,7 +50,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" style="margin-left: 10px;" valign=
@@ -67,7 +67,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -82,7 +82,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="226">
@@ -98,7 +98,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="226">
@@ -113,7 +113,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -128,7 +128,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="226">
@@ -143,7 +143,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -158,7 +158,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="226">
@@ -174,7 +174,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -190,7 +190,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="226">
@@ -205,7 +205,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -220,7 +220,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="226">
@@ -235,7 +235,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -251,7 +251,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="226">
@@ -266,7 +266,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -281,7 +281,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="226">
@@ -296,7 +296,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="316">
@@ -311,7 +311,7 @@
         </tr>
       </tbody>
     </table>
-    <table border="0" cellpadding="0" cellspacing="0" width="500">
+    <table>
       <tbody>
         <tr>
           <td bgcolor="#44AA00" height="200" valign="middle" width="226">
