--- a/Sommer.html
+++ b/Sommer.html
@@ -25,7 +25,7 @@
     <table>
       <tbody>
         <tr>
-          <td align="center" bgcolor="#007700" height="80" width="860"><font face=
+          <td align="center" bgcolor="#007700" height="80" width="660"><font face=
           "Arial"><font size="6">Der Steingarten im Sommer und Herbst</font></font></td>
         </tr>
       </tbody>
@@ -195,7 +195,7 @@
           <td bgcolor="#44AA00" height="200" valign="middle" width="284">
             <p align="center" style="margin-left: 10px;"><font face="Arial" size="3">Linaria
             aeruginea kommt wie viele ähnliche Leinkräuter aus Spanien. Es ist einjährig, blüht in
-            den unterschiedlichsten Farben, säht sich kräftig aus, läßt sich aber in Schach halten.
+            den unterschiedlichsten Farben, sät sich kräftig aus, läßt sich aber in Schach halten.
             Lange Blütezeit bis in den November durch unterschiedliche Aussaatzeiten.</font></p>
           </td>
           <td bgcolor="#44AA00" height="200" valign="middle" width="216">
