--- a/index.html
+++ b/index.html
@@ -1,71 +1,126 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
-  <meta content="de" http-equiv="Content-Language">
-  <meta content="Garten,Steingarten,Dianthus,Daphne,Canarina,Campanula,Cistus,Ramonda,Verkauf"
-  lang="de" name="keywords">
-  <meta content=
-  "Christophs Pflanzenparadies. Verkaufsliste für Steingartenpflanzen. Mediterrane Raritäten, Dr. Christoph Rohlfs"
-  lang="de" name="description">
-  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-  <style media="all" type="text/css">
+  <meta http-equiv="Content-Language" content="de">
+  <meta name="keywords" lang="de" content="Garten,Steingarten,Dianthus,Daphne,Canarina,Campanula,Cistus,Ramonda,Verkauf">
+  <meta name="description" lang="de" content="Christophs Pflanzenparadies. Verkaufsliste für Steingartenpflanzen. Mediterrane Raritäten, Dr. Christoph Rohlfs">
+  <style type="text/css" media="all">
+  .imgstyle {
+    position: absolute;
+    visibility: visible;
+    top: -150px;
+  }
   body {
     background-image: url("images/Cyclamen-hederifolium.JPG");
+    margin: 50px 30px;
   }
-  td.kachel {
-    width: 50%;
-    height: 200px;
+  body, p, td {
+    color: #99cc33;
+    font: 16px sans-serif;
   }
-  a.big {
-    padding: 30px;
-    display: block;
+  .title {
+    font: 24px sans-serif;
+    text-align: center;
+    background-color: #009900;
   }
-  a.big:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+  a:link {
+    color: #ffcc99;
   }
-  </style>
-  <title>Der Steingärtner</title>
+  a:visited {
+    color: #ffcc99;
+  }
+  a:active {
+    color: #ffffff;
+  }
+  table {
+    border: 0px; 
+    width: 500px;
+    border-spacing: 0px;
+  }
+  td {
+    padding: 20px;
+  }
+</style>
+<title>Der Steingärtner</title>
 </head>
 <body>
-  <table><tbody>
-    <tr>
-      <td class="title" style="" colspan="2">Der Steingärtner</td>
-    </tr>
-    <tr>
-      <td class="green1" colspan="2">
-        <p>Willkommen auf meiner Homepage!</p>
-        <p>Als begeisterter Hobbygärtner möchte ich Ihnen hier ein paar Einblicke in meinen Garten geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber in meinem Garten ist auch für zahlreiche Stauden, Rosen, Sommerblumen, Gemüse und Obstgehölze Platz, in meinem Gewächshaus dürfen Orchideen ihre Pracht entfalten.</p>
-        <p>Im Hauptberuf bin ich übrigens Zahnarzt, verheiratat, und habe 2 Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am Stadtrand. Mein Name: Dr. Christoph Rohlfs</p>
-        <p>Androsace, Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula, Ramonda ... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in meinem Garten.</p>
-      </td>
-    </tr>
-    <tr>
-      <td class="green2 center kachel">
-        <a class="big" href="Tipsneu.html">Tips, Tricks und Pflegeanleitungen</a>
-      </td>
-      <td class="green6 center kachel">
-        <a class="big" href="Fotostartseiteneu.html">Fotos</a>
-        <p>Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem
-        gibt es Fotos von Steingartenpflanzen zu sehen.</p>
-      </td>
-    </tr>
-    <tr>
-      <td class="green3 center kachel">
-        <a class="big" href="Kontaktneu.html">Kontakt,
-        Impressum, Datenschutz</a>
-      </td>
-      <td class="green4 center kachel">
-        <a class="big" href="preisliste.html">Bestellung</a>
-        <p>Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum
-        Bestellformular</p>
-      </td>
-    </tr>
-    <tr>
-      <td class="green5 center" style="height: 100px;" colspan="2">
-        <a class="big" href="linksammlung.html">Linksammlung</a>
-      </td>
-    </tr>
-  </tbody></table>
+  <div id="uebersicht" align="center">
+    <table>
+      <tbody>
+        <tr>
+          <td class="title" colspan="2">Der Steingärtner</td>
+        </tr>
+        <tr>
+          <td colspan="2" width="100%" bgcolor="#007700">
+            <p align="left" style="margin-right: 10px;">
+              <font size="3" face="Arial"> Willkommen auf meiner Homepage!
+              </font>
+            </p>
+            <p align="left" style="margin-right: 10px;">
+              <font size="3" face="Arial"> Als begeisterter Hobbygärtner möchte ich Ihnen hier ein paar Einblicke in meinen Garten geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber in meinem Garten ist auch für zahlreiche Stauden, Rosen, Sommerblumen, Gemüse und Obstgehölze Platz, in meinem Gewächshaus dürfen Orchideen ihre Pracht entfalten.
+              </font>
+            </p>
+            <p align="left" style="margin-right: 10px;">
+              <font size="3" face="Arial"> Im Hauptberuf war ich übrigens Zahnarzt, verheiratat, und habe 2 erwachsene Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am Stadtrand. Mein Name: Dr. Christoph Rohlfs
+              </font>
+            </p>
+            <p align="left" style="margin-right: 10px;">
+              <font size="3" face="Arial"> Androsace, Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula, Ramonda... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in meinem Garten.
+              </font>
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td width="50%" height="200" bgcolor="#448800">
+            <p align="center">
+              <font size="4" face="Arial">
+                <a href="Tipsneu.html">Tips, Tricks und Pflegeanleitungen</a>
+              </font>
+            </p>
+          </td>
+          <td width="50%" height="200" bgcolor="#00aa11">
+            <p align="center">
+              <font size="4" face="Arial">
+                <a href="Fotostartseiteneu.html">Fotos</a>
+              </font>
+              <br>
+              <font face="Arial" size="2">
+                Hier geht&#8217;s zu Fotos meines Gartens &#8211; vor allem gibt es Fotos von Steingartenpflanzen zu sehen
+              <br>
+              </font>
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td width="50%" height="200" bgcolor="#44aa00">
+            <p align="center">
+              <font size="4" face="Arial">
+                <a href="Kontaktneu.html">Kontakt, Impressum, Datenschutz</a>
+              </font>
+            </p>
+          </td>
+          <td width="50%" height="200" bgcolor="#337711">
+            <p align="center">
+              <font size="4" face="Arial">
+                <a href="preisliste.html">Bestellung</a>
+              </font>
+              <br>
+              <font face="Arial" size="2">Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum Bestellformular
+                <br>
+              </font>
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" bgcolor=#009700">
+            <p align="middle" style="margin-right: 10px;">
+              <font size="3" color=#GG0000" face="Arial">
+                <a href="linksammlung.html"> Linksammlung
+              </font>
+            </p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </body>
 </html>
